// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/menu/demo/horizontal.md correctly 1`] = `
<ul
  class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-horizontal"
  role="menu"
>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      title=""
    >
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    aria-selected="true"
    class="c7n-menu-item c7n-menu-item-selected"
    role="menuitem"
  >
    <i
      class="icon icon-mail_outline"
    />
    Navigation One
    <div
      class="c7n-ripple-wrapper"
    />
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      title=""
    >
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    aria-disabled="true"
    aria-selected="false"
    class="c7n-menu-item c7n-menu-item-disabled"
    role="menuitem"
  >
    <i
      class="icon icon-apps"
    />
    Navigation Two
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      title=""
    >
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        Navigation Three - Submenu
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      title=""
    >
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    aria-selected="false"
    class="c7n-menu-item"
    role="menuitem"
  >
    <a
      href="https://choerodon.github.io/choerodon-ui/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Navigation Four - Link
    </a>
    <div
      class="c7n-ripple-wrapper"
    />
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
    role="menuitem"
    style="visibility:hidden;position:absolute"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      title=""
    >
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline.md correctly 1`] = `
<ul
  class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
  role="menu"
  style="width:256px"
>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open c7n-menu-submenu-selected"
    role="menuitem"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <ul
      class="c7n-menu  c7n-menu-sub c7n-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        class=" c7n-menu-item-group"
      >
        <div
          class="c7n-menu-item-group-title"
          title="Item 1"
        >
          Item 1
        </div>
        <ul
          class="c7n-menu-item-group-list"
        >
          <li
            aria-selected="true"
            class="c7n-menu-item c7n-menu-item-selected"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 1
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-selected="false"
            class="c7n-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 2
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </li>
      <li
        class=" c7n-menu-item-group"
      >
        <div
          class="c7n-menu-item-group-title"
          title="Item 2"
        >
          Item 2
        </div>
        <ul
          class="c7n-menu-item-group-list"
        >
          <li
            aria-selected="false"
            class="c7n-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 3
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-selected="false"
            class="c7n-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 4
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline-collapsed.md correctly 1`] = `
<div
  style="width:256px"
>
  <button
    class="c7n-btn c7n-btn-primary c7n-btn-flat"
    style="margin-bottom:16px"
    type="button"
  >
    <i
      class="icon icon-folder"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <ul
    class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
    role="menu"
  >
    <li
      aria-selected="true"
      class="c7n-menu-item c7n-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-pie_chart_outlined"
      />
      <span>
        Option 1
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="c7n-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-desktop_windows"
      />
      <span>
        Option 2
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="c7n-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-inbox"
      />
      <span>
        Option 3
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-mail_outline"
          />
          <span>
            Navigation One
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <ul
        class="c7n-menu  c7n-menu-sub c7n-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 5
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 6
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 7
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 8
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-apps"
          />
          <span>
            Navigation Two
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/sider-current.md correctly 1`] = `
<ul
  class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
  role="menu"
  style="width:256px"
>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open"
    role="menuitem"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <ul
      class="c7n-menu  c7n-menu-sub c7n-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 1
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 2
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 3
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 4
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
    </ul>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/switch-mode.md correctly 1`] = `
<div>
  <span
    class="c7n-switch"
    tabindex="0"
  >
    <span
      class="c7n-switch-inner"
    />
  </span>
   Change Mode
  <span
    class="c7n-divider"
    style="margin:0 1em"
  />
  <br />
  <br />
  <ul
    class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
    role="menu"
    style="width:256px"
  >
    <li
      aria-selected="true"
      class="c7n-menu-item c7n-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-mail_outline"
      />
      Navigation One
      <div
        class="c7n-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="c7n-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-perm_contact_calendar"
      />
      Navigation Two
      <div
        class="c7n-ripple-wrapper"
      />
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-apps"
          />
          <span>
            Navigation Three
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <ul
        class="c7n-menu  c7n-menu-sub c7n-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 3
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 4
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          class="c7n-menu-submenu c7n-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="c7n-menu-submenu-title"
            style="padding-left:48px"
            title="Submenu"
          >
            Submenu
            <i
              class="c7n-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
      </ul>
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-settings"
          />
          <span>
            Navigation Four
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/theme.md correctly 1`] = `
<div>
  <span
    checked=""
    class="c7n-switch c7n-switch-checked"
    tabindex="0"
  >
    <span
      class="c7n-switch-inner"
    >
      Dark
    </span>
  </span>
  <br />
  <br />
  <ul
    class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-inline"
    role="menu"
    style="width:256px"
  >
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open c7n-menu-submenu-selected"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-mail"
          />
          <span>
            Navigation One
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <ul
        class="c7n-menu  c7n-menu-sub c7n-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          aria-selected="true"
          class="c7n-menu-item c7n-menu-item-selected"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 1
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 2
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 3
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 4
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-appstore"
          />
          <span>
            Navigtion Two
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
    <li
      class="c7n-menu-submenu c7n-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="c7n-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-setting"
          />
          <span>
            Navigation Three
          </span>
        </span>
        <i
          class="c7n-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/vertical.md correctly 1`] = `
<ul
  class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-vertical"
  role="menu"
  style="width:256px"
>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="c7n-menu-submenu c7n-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="c7n-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="c7n-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;
